--- a/Webpack/task_0/package.json
+++ b/Webpack/task_0/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "devDependencies": {
+    "webpack": "^5.90.0",
+    "webpack-cli": "^4.10.0"
+  },
   "dependencies": {
     "jquery": "^3.7.1"
-  }
+  },
+  "description": ""
 }
