--- a/Webpack/task_1/package.json
+++ b/Webpack/task_1/package.json
@@ -1,20 +1,21 @@
 {
-    "name": "task_0",
+    "name": "task_1",
     "version": "1.0.0",
+    "description": "",
     "main": "index.js",
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "webpack --mode development"
+      "build": "webpack"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "webpack": "^5.90.0",
-      "webpack-cli": "^4.10.0"
+      "webpack": "^5.21.2",
+      "webpack-cli": "^4.5.0"
     },
     "dependencies": {
-      "jquery": "^3.7.1"
-    },
-    "description": ""
+      "jquery": "^3.5.1",
+      "lodash": "^4.17.20"
+    }
   }
