--- a/react_props/task_5/dashboard/package.json
+++ b/react_props/task_5/dashboard/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://izzeddin62.github.io/alu-web_react",
+  "homepage": "https://mnshimiyimana.github.io/react_intro",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
