--- a/React_component/task_0/dashboard/package.json
+++ b/React_component/task_0/dashboard/package.json
@@ -44,6 +44,7 @@
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.63.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
   },
@@ -51,6 +52,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "readable-stream": "^4.5.2",
     "web-streams-polyfill": "^4.0.0"
   }
 }
