--- a/React_component/task_0/dashboard/package.json
+++ b/React_component/task_0/dashboard/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@types/enzyme": "^3.10.18",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
@@ -44,15 +45,12 @@
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.63.0",
-    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "readable-stream": "^4.5.2",
-    "web-streams-polyfill": "^4.0.0"
+    "react-dom": "^17.0.2"
   }
 }
