--- a/react_redux_connectors_and_providers/task_8/dashboard/package.json
+++ b/react_redux_connectors_and_providers/task_8/dashboard/package.json
@@ -25,7 +25,7 @@
     "reselect": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://izzeddin62.github.io/alu-web_react",
+  "homepage": "https://mnshimiyimana.github.io/alu-web_react",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
